--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,25 @@
     background-color: #242424;
     color: #F5F5F5;
     font-size: 17px;
-    margin-top: 20px,50px;
+    margin-top: 20px;
+    margin-left: 100px;
     font-family: 'Segoe UI', 'SegoeUI', 'Roboto', sans-serif;
     line-height: 26px;
     /* border: 1px solid whitesmoke; */
-    box-sizing: border-box;
-    
+    box-sizing: border-box;   
 
+}
+.setting-index{
+    /* text-decoration:none; */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    margin-top: 100px;
+    margin-left: 100px;
+    line-height: 30px;
+    
+}
+.setting--a{
+    /* text-transform: none; */
+    /* text-decoration: none; */
+    color: #F5F5F5;
 }
